[package]
name = "godot_mapgen"
version = "0.1.0"
edition = "2024"

[dependencies]
bracket-lib = "0.8.7"
godot = { version = "0.4.2", features = ["experimental-godot-api", "experimental-threads"] }
ndarray = "0.17.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
crate-type = ["cdylib"]
