[package]
name = "godot_mapgen"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { version = "0.4.2", features = ["experimental-godot-api", "experimental-threads"] }
ndarray = "0.17.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
ultraviolet = "0.10.0"
uuid = { version = "1.18.1", features = ["v4"] }
grid-ray = { git = "https://github.com/bonsairobo/ilattice-rs/" }

[lib]
crate-type = ["cdylib"]
